<?xml version="1.0" encoding="utf-8"?>

<!--COMP 4521 TING Kai Chung 20435275 kcting
    COMP 4521 CHEN Yu feng 20492352 ychenec
    COMP 4521 KONG Wai Yong 2462462 wykongaa-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:src="@drawable/btn_close" />

        <Button
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/save" />

    </RelativeLayout>

    <EditText
        android:id="@+id/task"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <RelativeLayout
        android:id="@+id/timeSelector"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintTop_toBottomOf="@+id/task"
        tools:layout_editor_absoluteX="2dp">

        <EditText
            android:id="@+id/in_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="56dp"
            android:hint="@string/enter_date" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/in_date"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:text="@string/select_date" />

        <EditText
            android:id="@+id/in_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:hint="@string/enter_time" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:text="@string/select_time" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_time"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:hint="@string/enter_duration" />

    </RelativeLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSelector"
        android:autofillHints="no" />


</androidx.constraintlayout.widget.ConstraintLayout>