<?xml version="1.0" encoding="utf-8"?>

<!--COMP 4521 TING Kai Chung 20435275 kcting
    COMP 4521 CHEN Yu feng 20492352 ychenec
    COMP 4521 KONG Wai Yong 2462462 wykongaa-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardActivity"
    android:background="#FFF3E0">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eee6ff"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:text="@string/ac_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/caveat_brush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efe5fd"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ac_descrip"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="@font/happy_monkey"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewAchievements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewAchievements"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#121254"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/recyclerviewAchievements">
        <LinearLayout
            android:id="@+id/layout_rewards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_rewards_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewards"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_calendar_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_box_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_clock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_clock_grey"
                android:color="#808080"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_person_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>