<?xml version="1.0" encoding="utf-8"?>

<!--COMP 4521 TING Kai Chung 20435275 kcting
    COMP 4521 CHEN Yu feng 20492352 ychenec
    COMP 4521 KONG Wai Yong 2462462 wykongaa-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    tools:context=".AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text= "@string/account"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorMain"/>

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/colorMain"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_person_blue"
                android:drawableStart="@drawable/ic_person_blue"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorIconGrey"/>
        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/colorMain"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_email_blue"
                android:drawableStart="@drawable/ic_email_blue"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/tv_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorIconGrey"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorIconGrey"/>
        <LinearLayout
            android:id="@+id/layout_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="20sp"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_exit_red"
                android:drawableStart="@drawable/ic_exit_red"
                android:drawablePadding="10dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/colorIconGrey"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMain"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/layout_rewards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_rewards_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewards"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_calendar_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_box_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_clock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_clock_grey"
                android:color="#808080"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_person_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>