<?xml version="1.0" encoding="utf-8"?>

<!--COMP 4521 TING Kai Chung 20435275 kcting
    COMP 4521 CHEN Yu feng 20492352 ychenec
    COMP 4521 KONG Wai Yong 2462462 wykongaa-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorMain"
        android:layout_above="@id/layout_bottom_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:inputType="text"
                android:hint="@string/search_hint"
                android:drawableStart="@drawable/ic_search_blue"
                android:drawableLeft="@drawable/ic_search_blue"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:autofillHints="Search"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGrey"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:divider="@color/colorLightGrey"
                android:dividerHeight="10sp">
            </ListView>

        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMain"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/layout_rewards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_rewards_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewards"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_calendar_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_box_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_clock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_clock_grey"
                android:color="#808080"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_person_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/colorIconGrey"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>